# docs/swagger.json
@@ -28,7 +28,7 @@
         "tags": [
           "用户模块"
         ],
-        "summary": "账号登录",
+        "summary": "用户登录注册",
         "parameters": [
           {
             "description": "params",
@@ -44,15 +44,14 @@
           "200": {
             "description": "OK",
             "schema": {
-              "$ref": "#/definitions/aphrodite-go_api_v1.LoginResponse"
+              "$ref": "#/definitions/aphrodite-go_api_v1.Response"
             }
           }
         }
       }
     },
-    "/register": {
+    "/send-code": {
       "post": {
-        "description": "目前只支持邮箱登录",
         "consumes": [
           "application/json"
         ],
@@ -62,7 +61,7 @@
         "tags": [
           "用户模块"
         ],
-        "summary": "用户注册",
+        "summary": "发送验证码",
         "parameters": [
           {
             "description": "params",
@@ -70,7 +69,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/aphrodite-go_api_v1.RegisterRequest"
+              "$ref": "#/definitions/aphrodite-go_api_v1.SendVerifyCodeRequest"
             }
           }
         ],
@@ -241,73 +240,8 @@
     },
     "aphrodite-go_api_v1.LoginRequest": {
       "type": "object",
-      "required": [
-        "phone"
-      ],
       "properties": {
-        "password": {
-          "type": "string",
-          "example": "123456"
-        },
-        "phone": {
-          "type": "string",
-          "example": "13288888888"
-        },
-        "verifyCode": {
-          "type": "string",
-          "example": "1234"
-        }
-      }
-    },
-    "aphrodite-go_api_v1.LoginResponse": {
-      "type": "object",
-      "properties": {
-        "code": {
-          "type": "integer"
-        },
-        "data": {
-          "$ref": "#/definitions/aphrodite-go_api_v1.LoginResponseData"
-        },
-        "message": {
-          "type": "string"
-        }
-      }
-    },
-    "aphrodite-go_api_v1.LoginResponseData": {
-      "type": "object",
-      "properties": {
-        "accessToken": {
-          "type": "string"
-        }
-      }
-    },
-    "aphrodite-go_api_v1.RegisterRequest": {
-      "type": "object",
-      "required": [
-        "phone"
-      ],
-      "properties": {
-        "OpenId": {
-          "type": "string",
-          "example": "123456"
-        },
-        "UnionId": {
-          "type": "string",
-          "example": "123456"
-        },
-        "clientIp": {
-          "type": "string",
-          "example": "127.0.0.1"
-        },
-        "email": {
-          "type": "string",
-          "example": "1234@gmail.com"
-        },
-        "nickname": {
-          "type": "string",
-          "example": "banana"
-        },
-        "password": {
+        "openId": {
           "type": "string",
           "example": "123456"
         },
